@@ -14,6 +14,8 @@ For a complete change history, please see the Subversion log comments.
 Current Version (SVN trunk):
 ----------------------------
 
+- PHP/MapScript: ability to use the php clone keyword (#3472)
+
 - Modified mapserver units enum order to fix some problems with external softwares (#3173)
 
 - Fixed configure does not detect libGD version dependencies (#3478)
